# hype-mcp

./: .gitignore  =2.0.0  README.md  VALIDATION_AND_ERROR_HANDLING.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
src/hype_mcp/: __init__.py  __main__.py  asset_router.py  client_manager.py  config.py  decimal_manager.py  errors.py  models.py  server.py  validation.py
src/hype_mcp/tools/: __init__.py  exchange_tools.py  info_tools.py
tests/: README.md  __init__.py  conftest.py  test_asset_router.py  test_config.py  test_decimal_manager.py  test_exchange_tools.py  test_integration.py  test_tools.py  test_validation.py
