[project]
name = "hype-mcp"
version = "0.1.0"
description = "MCP server for Hyperliquid decentralized exchange"
readme = "README.md"
authors = [
    { name = "timbrinded", email = "79199034+timbrinded@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "hyperliquid-python-sdk>=0.5.0",
    "mcp>=0.9.0",
    "pydantic>=2.0.0",
    "cachetools>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
hype-mcp = "hype_mcp.__main__:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.4",
]
